# aml_ai_investigator

./: .gitattributes  README.md  SPEC.md
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: cases.py  copilot.py
backend/app/core/: config.py  logging.py
backend/app/llm/: provider.py
backend/app/pipelines/: case_packet_job.py  data_loading.py
backend/app/rag/: chunking.py  embeddings.py  indexer.py  retriever.py
backend/app/schemas/: case.py  copilot.py
backend/app/services/: case_service.py  copilot_service.py
backend/app/storage/: vector_store.py
backend/scripts/: run_case_packet_job.py
backend/tests/: conftest.py  test_api.py  test_copilot_endpoint.py  test_rag_chunking.py  test_rag_retrieval.py
data/: Data Loading.ipynb  alerts_cash.csv  alerts_credit_cards.csv  alerts_loans.csv  alerts_ngi.csv  alerts_wires.csv  counterparties.csv  merchants.csv  parties.csv  schemas_grounding.json  transactions.csv
data/case_packet/: .part-00000-38cac65b-3c8a-4048-b8f5-194e0744952c-c000.snappy.parquet.crc  .part-00001-38cac65b-3c8a-4048-b8f5-194e0744952c-c000.snappy.parquet.crc  .part-00002-38cac65b-3c8a-4048-b8f5-194e0744952c-c000.snappy.parquet.crc  .part-00003-38cac65b-3c8a-4048-b8f5-194e0744952c-c000.snappy.parquet.crc  (+8 more)
data/schemas/: parties.schema.json  (+7 more)
policy_corpus/: 01_SAR_Guidance_Comprehensive.md  02_Internal_Investigation_Playbook.md  03_Financial_Crime_Typologies.md  04_SAR_Narrative_Best_Practices.md
scripts/: index_policies.py
(+26 files in other folders)
