[project]
name = "aml-ai-investigator"
version = "0.1.0"
description = "AML investigator API service"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "pyarrow>=15.0.0",
    "pandas>=2.2.0",
    "pyspark>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.aml.runtime]
case_packet_schedule = "0 2 * * *"
data_base_path = "data"
spark_shuffle_partitions = "200"
spark_timezone = "UTC"
support_txn_max = 200
top_counterparties_max = 50
top_merchants_max = 50
